--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-router": "^1.139.14",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-aria-components": "^1.13.0",
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.68.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
