--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-router": "^1.139.14",
+    "axios": "^1.13.2",
     "dayjs": "^1.11.19",
     "react": "^19.2.0",
     "react-aria-components": "^1.13.0",
